# jagged-frontier

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_routing.py  library_usage.py
jagged/: __init__.py  benchmark.py  capabilities.py  classifier.py  cli.py  delegation.py  registry.py  router.py
jagged/data/: models.yaml
tests/: test_benchmark.py  test_capabilities.py  test_classifier.py  test_delegation.py  test_dictatorship.py  test_integration.py  test_registry.py  test_router.py
